--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mansa Dev Portfolio</title>
     <style>
-        
+        * {
+            background-color: rgb(58, 58, 58);
+            color: whitesmoke;
+        }
     </style>
 </head>
 <body>
