--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Hello world!</h1>
-    <h2>Mansa Returns</h2>
+    <h2>Welcome to my living and growing developer portfolio.</h2>
 </body>
 </html>
