--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     body {
-        background: linear-gradient(to top, #4eb8ff, #040036); /* Replace with your gradient colors */
+        background: linear-gradient(to top, #585858, #000000); /* Replace with your gradient colors */
         font-family: monospace;
     }
 </style>
@@ -25,7 +25,7 @@
           <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">Universal Developer Global</h1>
             <p class="mb-5 text-2xl">Join our global community of developers to learn, earn, and grow.</p>
-            <button onclick="openDiscordLink()" class="btn btn-xs sm:btm-sm md:btn-md lg:btn-lg btn-outline btn-accent">Discord</button>
+            <button onclick="openDiscordLink()" class="btn btn-xs sm:btm-sm md:btn-md lg:btn-lg btn-outline btn-info">Discord</button>
           </div>
         </div>
     </div>
