--- a/landingv2/psu_landing.html
+++ b/landingv2/psu_landing.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/psu_landing.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Problem Solvers United | Coinlist MVP</title>
+
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav>
-        <h1 class="nav-title">
-            Problem Solvers United
-        </h1>
-    </nav>
+<body class="bg-gray-100">
+
+  <header class="container mx-auto py-8 px-4 flex justify-between items-center">
+    <h1 class="text-4xl font-bold text-gray-800">Problem Solvers United</h1>
+    <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Join Now</a>
+  </header>
+
+  <main class="container mx-auto py-4 px-4">
+    <section class="flex flex-col items-center">
+      <h2 class="text-3xl font-bold mb-4">Introducing Our Coinlist MVP</h2>
+      <p class="text-lg text-gray-700">
+        We're excited to announce our first project, a decentralized launchpad for innovative tech projects.
+      </p>
+    </section>
+
+    <section class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-8">
+      <div class="bg-white rounded-lg shadow-md p-4">
+        <h3 class="text-xl font-bold mb-2">Empowering Developers Globally</h3>
+        <p class="text-gray-700">
+          Our platform provides a unique opportunity for developers to showcase their projects and gain early-stage funding.
+        </p>
+      </div>
+      <div class="bg-white rounded-lg shadow-md p-4">
+        <h3 class="text-xl font-bold mb-2">Invest in Promising Projects</h3>
+        <p class="text-gray-700">
+          Investors can discover and participate in cutting-edge tech and software projects with the potential for high returns.
+        </p>
+      </div>
+    </section>
+
+    <section class="flex flex-col items-center mt-8">
+      <h2 class="text-2xl font-bold mb-4">Join the Community</h2>
+      <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Sign Up for Updates</a>
+    </section>
+  </main>
+
+  <footer class="w-full md:max-w-screen-xl mx-auto py-4 px-4 text-center text-gray-600 fixed bottom-0">
+    © 2024 Problem Solvers United
+  </footer>
 </body>
 </html>
