--- a/nst_digital/LANDINGV1/index.html
+++ b/nst_digital/LANDINGV1/index.html
@@ -49,7 +49,33 @@
 
         </div>
         <div class="section2">
+            <div class="left2">
+                <img src="https://i.ibb.co/D79rDCW/egg.jpg" alt="egg-image">
+                
+            </div>
+            <div class="right2">
+                <div class="text-container1">
+                    <h1>Speak directly to your audience</h1>
+                <p>
+                    We are fully comprehensive online business development consultants coupled with 
+                    over 110 years of combined local experience in the ENC. Connect with our expert network today.
+                </p>
+                <div class="button">
+                    <div>
+                        <img src="https://i.ibb.co/TB2DVgK/learnmore.png" alt="learn-btn">
+                    </div>
+                </div>
+                </div>
+            </div>
 
+        </div>
+        <div class="section3">
+            <div class="left">
+                <img src="https://i.ibb.co/ssvvmSd/cherries.png" alt="s3left-img">
+            </div>
+            <div class="right">
+                <img src="https://i.imgur.com/nVFptJO.png" alt="s3right-img">
+            </div>
         </div>
     </div>
 </body>
