--- a/CUSTOMER_PROTOYPES/index.html
+++ b/CUSTOMER_PROTOYPES/index.html
@@ -11,11 +11,11 @@
 <body class="font-sans bg-gray-100">
 
 <!-- Hero Section -->
-<section class="bg-blue-500 text-white py-16 text-center">
+<section class="bg-green-500 text-white py-16 text-center">
     <div class="container mx-auto">
         <h1 class="text-4xl font-bold mb-4">Ditch the Tax Drama. Focus on What You Do Best.</h1>
         <p class="text-lg mb-8">Ventura Accounting takes care of your finances, so you can focus on growing your business.</p>
-        <a href="#consultation" class="bg-white text-blue-500 py-2 px-6 rounded-full text-lg hover:bg-gray-200">Schedule a Free Consultation</a>
+        <a href="#consultation" class="bg-white text-green-500 py-2 px-6 rounded-full text-lg hover:bg-gray-200">Schedule a Free Consultation</a>
     </div>
 </section>
 
@@ -60,10 +60,10 @@
 </section>
 
 <!-- CTA Section -->
-<section id="consultation" class="bg-blue-500 text-white py-16 text-center">
+<section id="consultation" class="bg-green-500 text-white py-16 text-center">
     <div class="container mx-auto">
         <p class="text-xl font-bold mb-4">Ready to reclaim your time and achieve financial peace of mind?</p>
-        <a href="#get-started" class="bg-white text-blue-500 py-2 px-6 rounded-full text-lg hover:bg-gray-200">Get Started Today</a>
+        <a href="#get-started" class="bg-white text-green-500 py-2 px-6 rounded-full text-lg hover:bg-gray-200">Get Started Today</a>
     </div>
 </section>
 
@@ -83,9 +83,9 @@
         <!-- Social Proof -->
         <p class="text-lg mb-8">Follow us on social media:</p>
         <div class="flex justify-center space-x-4">
-            <a href="#" class="text-blue-500 hover:underline">Facebook</a>
-            <a href="#" class="text-blue-500 hover:underline">Twitter</a>
-            <a href="#" class="text-blue-500 hover:underline">LinkedIn</a>
+            <a href="#" class="text-green-500 hover:underline">Facebook</a>
+            <a href="#" class="text-green-500 hover:underline">Twitter</a>
+            <a href="#" class="text-green-500 hover:underline">LinkedIn</a>
             <!-- Add more social media links as needed... -->
         </div>
     </div>
@@ -95,7 +95,7 @@
 <section id="get-started" class="bg-white py-16 text-center">
     <div class="container mx-auto">
         <p class="text-lg mb-4">Bonus Tip: Download our free tax checklist!</p>
-        <a href="#" class="bg-blue-500 text-white py-2 px-6 rounded-full text-lg hover:bg-blue-700">Download Now</a>
+        <a href="#" class="bg-green-500 text-white py-2 px-6 rounded-full text-lg hover:bg-green-700">Download Now</a>
     </div>
 </section>
 
