--- a/CLIENTS/TrimLawnOrganics/v1/index.html
+++ b/CLIENTS/TrimLawnOrganics/v1/index.html
@@ -20,27 +20,27 @@
 
     <header class="bg-blue-500 p-4 text-white">
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold">Your Company Name</h1>
-            <p class="text-sm">Optimizing Your Digital Presence</p>
+            <h1 class="text-3xl font-bold">Bassen Digital</h1>
+            <p class="text-sm">Strategic Lead Acceleration & Digital Consultation</p>
         </div>
     </header>
 
     <section class="container mx-auto my-8">
-        <h2 class="text-2xl font-bold mb-4">Monthly Marketing Services</h2>
+        <h2 class="text-2xl font-bold mb-4">Starter Package</h2>
         <table class="w-full mb-8">
             <tr>
                 <td>Basic - Social Media Campaigns</td>
-                <td>6 </td>
+                <td>6</td>
                 <td>$125</td>
                 <td>$750</td>
-                <td>Basic</td>
+                <td>Starter</td>
             </tr>
             <tr>
                 <td>Paid Advertising Campaigns</td>
                 <td>1</td>
                 <td>$180</td>
                 <td>$180 (Optional)</td>
-                <td>Basic</td>
+                <td>Starter</td>
             </tr>
             <tr>
                 <td>SEO Optimization (Starter)</td>
@@ -65,7 +65,7 @@
             </tr>
         </table>
 
-        <h2 class="text-2xl font-bold mb-4">One-Time Marketing Services</h2>
+        <h2 class="text-2xl font-bold mb-4">Recommended: Directors Choice</h2>
         <table class="w-full mb-8">
             <tr>
                 <td>Directors Choice - Interactive Quiz</td>
@@ -102,13 +102,7 @@
                 <td>$420</td>
                 <td>Directors</td>
             </tr>
-            <tr>
-                <td>SEO Optimization (Basic)</td>
-                <td>1</td>
-                <td>$312</td>
-                <td>$312</td>
-                <td>Basic</td>
-            </tr>
+
             <tr>
                 <td>Community Garden Sponsorship</td>
                 <td>1</td>
@@ -122,7 +116,7 @@
         <table class="w-full mb-8">
             <tr>
                 <td>Total Monthly Services</td>
-                <td>$930</td>
+                <td>$125</td>
             </tr>
             <tr>
                 <td>Total One-Time Services (excluding recommendations)</td>
@@ -134,7 +128,7 @@
             </tr>
             <tr>
                 <td>Total Amount (Low Range)</td>
-                <td>$3544</td>
+                <td>$2669</td>
             </tr>
         </table>
 
@@ -142,7 +136,7 @@
         <table class="w-full mb-8">
             <tr>
                 <td>Total Monthly Services</td>
-                <td>$93.33</td>
+                <td>$125</td>
             </tr>
             <tr>
                 <td>Total One-Time Services (excluding recommendations)</td>
@@ -154,7 +148,7 @@
             </tr>
             <tr>
                 <td>Total Amount (Low Range)</td>
-                <td>$354.44</td>
+                <td>$354.50</td>
             </tr>
         </table>
 
@@ -164,7 +158,7 @@
     </section>
 
     <footer class="bg-gray-800 text-white p-4 text-center">
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2024 Bassen Digital. All rights reserved.</p>
     </footer>
 
 </body>
