--- a/nst_digital/index.html
+++ b/nst_digital/index.html
@@ -83,7 +83,7 @@
     <!-- Projects Section -->
     <section id="projects" class="bg-gray-100 py-16">
         <div class="container mx-auto text-center">
-            <h2 class="text-2xl md:text-4xl font-extrabold mb-8">Our Projects</h2>
+            <h2 class="text-2xl md:text-4xl font-extrabold mb-8">Project Gallery</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Project Card 1 -->
                 <div class="bg-white p-8 rounded-lg shadow-md">
@@ -186,6 +186,3 @@
 </body>
 
 </html>
-```
-
-This code includes the full HTML structure with the modal form handling and the associated JavaScript code.
